--- a/client/public/components/pop_up.css
+++ b/client/public/components/pop_up.css
@@ -43,10 +43,11 @@ background: #FF4C29;
     height: 100%;
     top: 0;
     left: 0;
+    z-index: 100;
+    background-color: rgba(0,0,0, 50%);
 }
 
 .form-pop-up {
-    z-index: 99999;
     position: relative;
     background-color: #2C394B;
     margin: 0 auto;
@@ -107,7 +108,6 @@ background: #FF4C29;
     height: 80%;
     border-radius: 0.625em;
     padding: 100px;
-    z-index: 99999;
     box-shadow: 0px 2px 5px 0px rgb(0 0 0 / 75%);
 }
 
